resources/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/version: v1.9.0
  name: prometheus
  namespace: monitoring
spec:
  clusterIP: None
  ports:
  - name: web
    port: 9090
    targetPort: web
  selector:
      prometheus: prometheus
