resources/prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - host: prometheus.k3s.8n1.sh
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
